--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 
 <html lang="en">
     <head>
+        <meta charset="UTF-8" />
+        <meta name="x-ua-compatible" content="ie=edge,chrome=1" />
+        <meta name="viewport" content="width=device-width,initial-width=1.0,maximum-width=1.0,user-scalable=no" />
+
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
