--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="x-ua-compatible" content="ie=edge,chrome=1" />
-        <meta name="viewport" content="width=device-width,initial-width=1.0,maximum-width=1.0,user-scalable=no" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0,shrink-to-fit=0" />
 
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
